--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "fontsource-roboto": "^3.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2"
@@ -18,7 +21,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "react-scripts": "latest"
+    "react-scripts": "^3.4.4"
   },
   "browserslist": {
     "production": [
